[package]
name = "udt"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
keywords = ["udp", "socket", "udt", "udt4"]
readme = "README.md"
description = """
Bindings to udt, a high performance data transfer protocol (based on UDP)
"""
license = "BSD"

[dependencies]
libudt4-sys = {path = "libudt4-sys", version="0.1"}
libc = "0.1"
