[package]
name = "udt"
version = "0.1.1"
authors = ["Andrew Chin <achin@eminence32.net>"]
keywords = ["udp", "socket", "udt", "udt4"]
readme = "README.md"
repository = "https://github.com/eminence/udt-rs"
homepage = "https://github.com/eminence/udt-rs"
description = """
Bindings to udt, a high performance data transfer protocol (based on UDP)
"""
license = "BSD-3-Clause"

[dependencies]
libudt4-sys = {path = "libudt4-sys", version="0.1"}
libc = "0.1"
log = "0.3"
