[package]
name = "udt"
version = "0.2.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
keywords = ["udp", "socket", "udt", "udt4"]
readme = "README.md"
repository = "https://github.com/eminence/udt-rs"
homepage = "https://github.com/eminence/udt-rs"
description = """
Bindings to udt, a high performance data transfer protocol (based on UDP)
"""
license = "BSD-3-Clause"

[dependencies]
libudt4-sys = {path = "libudt4-sys", version="0.2"}
libc = "0.2"
log = "0.3"
bitflags = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
