[package]
name = "libudt4-sys"
authors = ["Andrew Chin <achin@eminence32.net>"]
build = "build.rs"
version = "0.1.1"
links = "udt4wrap"
description = "Native bindings to a C wrapper around the UDT library"
license = "BSD-3-Clause"
repository = "https://github.com/eminence/udt-rs"

[lib]
name = "libudt4_sys"
path = "lib.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.1"
